--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "msr": "^1.2.8",
     "node-promise": "^0.5.12",
     "restify": "^3.0.1",
-    "restify-cookies": "^0.1.1"
+    "restify-cookies": "^0.1.1",
+    "socket.io": "^1.3.6"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
