--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,12 @@
     "bootstrap": "~3.3.4",
     "ng-lodash": "~0.2.0",
     "angular-ui-router": "~0.2.13",
-    "angular-cookies": "~1.3.15",    
+    "angular-cookies": "~1.3.15",
     "webcam-directive": "~3.0.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.14",
+    "angular-socket.io-mock": "~1.1.0"
   },
   "appPath": "app"
 }
