--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "control webcam from web app",
   "author": "paulhemmings",
   "license": "MIT",
+  "engines": {
+      "node": "0.12.0",
+      "npm": "2.7.0",
+      "bower": "1.4.1"
+  },
   "dependencies": {
     "msr": "^1.2.8",
     "node-promise": "^0.5.12",
@@ -12,6 +17,7 @@
     "socket.io": "^1.3.6"
   },
   "devDependencies": {
+    "bower": "1.4.1",
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-bump": "^0.3.0",
